--- a/config.json.example
+++ b/config.json.example
@@ -3,7 +3,7 @@
     "logfile": "",
      
     "email_from": "",
-    "email_to": [],
+    "email_to": "",
      
     "username": "", 
     "password": "",
